--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 fastapi==0.116.1
 fastapi-utils==0.8.0
-typing_inspect
 sqlmodel==0.0.24
-argon2-cffi==25.1
+pydantic~=2.11.7
+
+SQLAlchemy~=2.0.41
+starlette~=0.47.1
