--- a/requirements.in
+++ b/requirements.in
@@ -1,8 +1,13 @@
 fastapi==0.116.1
 fastapi-utils==0.8.0
-typing_inspect
 sqlmodel==0.0.24
-argon2-cffi==25.1
-alembic==1.16.4
-zxcvbn==4.5.0
+pydantic~=2.11.7
+typing_inspect==0.9.0
+SQLAlchemy~=2.0.41
+starlette~=0.47.1
+zxcvbn~=4.5.0
+starlette~=0.47.1
 PyJWT==2.8.0
+psycopg2-binary==2.9.9
+uvicorn==0.29.0
+argon2-cffi==25.1
