--- a/requirements.in
+++ b/requirements.in
@@ -8,7 +8,8 @@ starlette~=0.47.1
 zxcvbn~=4.5.0
 starlette~=0.47.1
 PyJWT==2.8.0
-psycopg2-binary==2.9.9
+psycopg[binary]>=3.1
 uvicorn==0.29.0
 argon2-cffi==25.1
 websockets==15.0.1
+python-multipart==0.0.20
