--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DB_CONNECTOR=postgres
 AUTH_USERNAME=user
 AUTH_PASSWORD=pass
 POSTGRES_DB=auth_db
-POSTGRES_HOST=db
+POSTGRES_HOST=auth-db
 POSTGRES_PORT=5432
 HOST_API_PORT=8000
 HOST_DB_PORT=35432
